Updating color scheme

--- a/galleryprototype.css
+++ b/galleryprototype.css
@@ -8,7 +8,7 @@ img {
 }
 
 table{
-	border: 20px lightgreen solid;
+	border: 20px #AADDAA solid;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
     padding: 5px
